--- a/Pages/style.css
+++ b/Pages/style.css
@@ -22,16 +22,15 @@ body,
 .mainDiv {
   padding: 10px 10px;
 }
-/* Dropdown Menu for small screens */
+
 #Dropdown {
   display: none;
 }
-.Menu {
-  display: inline-block;
+.MenuButton {
   position: relative;
   margin: 20px;
+  overflow: visible;
 }
-/* Menu Icon */
 .MenuButton > div {
   display: none;
   width: 35px;
@@ -40,14 +39,19 @@ body,
   margin: 6px 0;
   transition: 0.4s;
 }
+.Menu{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
 /* Dropdown Box */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #fdfdfd;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 20px 16px;
+  background-color: rgb(255, 255, 255);
+  width: 100vw;
+  height: 100vh;
+  bottom: -100px;
 }
 /* Dropdown items */
 .dropdown-content a {
@@ -55,58 +59,28 @@ body,
   color: rgb(90, 205, 237);
   padding: 10px 20px;
 }
-
-@media only screen and (max-width: 500px) {
-  /* hiding large screen menu content */
-  .NavBar ul {
-    display: none;
-  }
-
-  .MenuButton > div {
-    display: flex;
-  }
-  /* Animating menu button into X */
-  #Dropdown:checked + label .MenuButton .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
-  }
-  #Dropdown:checked + label .MenuButton .bar2 {
-    opacity: 0;
-  }
-  #Dropdown:checked + label .MenuButton .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
-  }
-  /* Showing dropdown */
-  #Dropdown:checked + label ~ .dropdown-content {
-    display: flex;
-    flex-direction: column;
-  }
-  .dropdown-content:hover a:hover {
-    background-color: #ddd;
-  }
+/* Animating menu button into X */
+#Dropdown:checked + label .MenuButton .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+#Dropdown:checked + label .MenuButton .bar2 {
+  opacity: 0;
+}
+#Dropdown:checked + label .MenuButton .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
 }
 
-/*Large Screen Navigation Items*/
-/* Removing Bullet Points*/
-ul {
-  list-style-type: none;
+/* Showing dropdown */
+
+#Dropdown:checked + label ~ .dropdown-content {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  bottom:0px;
+  transition: bottom 0.4s ease-in-out;
 }
-/* Stacking list horizontally */
-li {
-  float: right;
+.dropdown-content:hover a:hover {
+  background-color: #ddd;
 }
-/* Adjusting Navigation Items */
-li a {
-  font-size: large;
-  color: rgb(90, 205, 237);
-  padding: 20px;
-}
-li a:hover {
-  background-color: #2c94c1;
-  color: #ddd;
-}
-
 /* Table Styling */
 #customers {
   /* margin: 5px; */
@@ -132,11 +106,93 @@ li a:hover {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #33b1e7;
   color: white;
 }
 
 footer {
+  padding: 15px;
   background-color: #33b1e7;
   color: white;
+}
+/* mobile */
+@media only screen and (max-width: 600px) {
+  .NavBar ul {
+    display: none;
+  }
+  .MenuButton > div {
+    display: flex;
+  }
+  .dropdown-content {
+    position: relative;
+  }
+  #customers th {
+    background-color: rgb(0, 85, 128);
+  }
+  .MenuButton > div {
+    background-color: rgb(0, 85, 128);
+    display: flex;
+  }
+  .dropdown-content a {
+    color: rgb(0, 85, 128);
+  }
+  footer{
+    background-color: rgb(0, 85, 128) ;
+  }
+}
+/*tablets  */
+@media only screen and (min-width: 600px) {
+  .NavBar ul {
+    display: none;
+  }
+  .MenuButton > div {
+    display: flex;
+  }
+  .dropdown-content {
+    position: relative;
+  }
+  #customers th {
+    background-color: green;
+  }
+  .MenuButton > div {
+    background-color: green;
+    display: flex;
+  }
+  .dropdown-content a {
+    color: green;
+  }
+  footer{
+    background-color: green ;
+  }
+}
+/* laptops and above */
+@media only screen and (min-width: 992px) {
+  .Menu {
+    display: none;
+  }
+  .NavBar ul{
+    display: flex;
+  }
+  ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+  }
+  /* Stacking list horizontally */
+  li {
+    float: right;
+  }
+  /* Adjusting Navigation Items */
+  li a {
+    font-size: large;
+    color: rgb(90, 205, 237);
+    padding: 20px;
+  }
+  #customers th {
+    background-color: rgb(90, 205, 237);
+  }
+  li a:hover {
+    background-color: #2c94c1;
+    color: #ddd;
+  }
+  footer{background-color: rgb(90, 205, 237)}
 }
