--- a/Pages/style.css
+++ b/Pages/style.css
@@ -8,10 +8,10 @@ body,
 /* Navigation bar format */
 .NavBar {
   display: flex;
-  position: sticky;
-  top: 0;
   flex-flow: row wrap;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0ee;
 }
@@ -22,41 +22,36 @@ body,
 .mainDiv {
   padding: 10px 10px;
 }
-
+/* Hiding drop down checkbox that is added to implement OnClick functionality for menu button */
 #Dropdown {
   display: none;
 }
 .MenuButton {
   position: relative;
   margin: 20px;
-  overflow: visible;
 }
+/* Format of menu button's three bars */
 .MenuButton > div {
   display: none;
   width: 35px;
   height: 5px;
-  background-color: #33b1e7;
   margin: 6px 0;
   transition: 0.4s;
 }
-.Menu{
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-}
 /* Dropdown Box */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  background-color: white;
   width: 100vw;
-  height: 100vh;
-  bottom: -100px;
+  height: 0;
+  overflow: hidden;
+  transition: height 0.4s ease-in-out; 
 }
+
 /* Dropdown items */
 .dropdown-content a {
   font-size: large;
-  color: rgb(90, 205, 237);
   padding: 10px 20px;
 }
 /* Animating menu button into X */
@@ -71,19 +66,15 @@ body,
 }
 
 /* Showing dropdown */
-
 #Dropdown:checked + label ~ .dropdown-content {
-  display: flex;
-  flex-direction: column;
-  bottom:0px;
-  transition: bottom 0.4s ease-in-out;
+  height: 100vh;
+  transition: height 0.4s ease-in-out;
 }
 .dropdown-content:hover a:hover {
   background-color: #ddd;
 }
 /* Table Styling */
 #customers {
-  /* margin: 5px; */
   border-collapse: collapse;
   width: 100%;
 }
@@ -111,20 +102,19 @@ body,
 
 footer {
   padding: 15px;
-  background-color: #33b1e7;
   color: white;
 }
-/* mobile */
+/* For small screens e.g. mobile phones */
 @media only screen and (max-width: 600px) {
+  /* Hiding Nav. items */
   .NavBar ul {
     display: none;
   }
+  /* Showing mennu button */
   .MenuButton > div {
     display: flex;
   }
-  .dropdown-content {
-    position: relative;
-  }
+  /* Unifying colors when changing screen size */
   #customers th {
     background-color: rgb(0, 85, 128);
   }
@@ -135,11 +125,11 @@ footer {
   .dropdown-content a {
     color: rgb(0, 85, 128);
   }
-  footer{
-    background-color: rgb(0, 85, 128) ;
+  footer {
+    background-color: rgb(0, 85, 128);
   }
 }
-/*tablets  */
+/*for medium sized screens e.g. tablets  */
 @media only screen and (min-width: 600px) {
   .NavBar ul {
     display: none;
@@ -147,9 +137,7 @@ footer {
   .MenuButton > div {
     display: flex;
   }
-  .dropdown-content {
-    position: relative;
-  }
+  /* Unifying colors when changing screen size */
   #customers th {
     background-color: green;
   }
@@ -160,18 +148,21 @@ footer {
   .dropdown-content a {
     color: green;
   }
-  footer{
-    background-color: green ;
+  footer {
+    background-color: green;
   }
 }
 /* laptops and above */
 @media only screen and (min-width: 992px) {
-  .Menu {
+  .MenuButton,
+  .dropdown-content {
     display: none;
   }
-  .NavBar ul{
+
+  .NavBar ul {
     display: flex;
   }
+  /* Removing bullets and adjusting it */
   ul {
     list-style-type: none;
     display: flex;
@@ -187,12 +178,17 @@ footer {
     color: rgb(90, 205, 237);
     padding: 20px;
   }
-  #customers th {
-    background-color: rgb(90, 205, 237);
-  }
   li a:hover {
     background-color: #2c94c1;
     color: #ddd;
   }
-  footer{background-color: rgb(90, 205, 237)}
+  /* Unifying colors when changing screen size */
+  #customers th {
+    background-color: rgb(90, 205, 237);
+  }
+  footer {
+    background-color: rgb(90, 205, 237);
+  }
+ 
 }
+ 
